fixed overflow

--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,5 @@
 .Home {
+  width: 100vw;
 }
 
 /* ------------font stuff ------------ */
@@ -180,6 +181,7 @@ nav{
 /* ----welcome ------*/
 
 .welcome{
+  width: 100vw;
   height: 100vh;
   background-color: #F7F4FF;
 }
@@ -201,15 +203,16 @@ nav{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   position: relative;
+  /* overflow: hidden; */
 }
 
 .card-logo{
   display: flex;
   justify-content: flex-end;
-  margin: 10px;
+  /* margin: 10px; */
   width:30%;
 }
 
@@ -292,7 +295,7 @@ nav{
   align-items: center;
   justify-content: space-between;
   position:absolute;
-  right: 5px;
+  right: 10px;
   font-size: 16px;
   color:#4B4C81;
 }
